// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate loader options should throw an error on the "deleteOriginalAssets" option with "() => {}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.deleteOriginalAssets should be a boolean."
`;

exports[`validate loader options should throw an error on the "deleteOriginalAssets" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.deleteOriginalAssets should be a boolean."
`;

exports[`validate loader options should throw an error on the "deleteOriginalAssets" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.deleteOriginalAssets should be a boolean."
`;

exports[`validate loader options should throw an error on the "filename" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   string | function
   Details:
    * options.filename should be a string.
    * options.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "filename" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   string | function
   Details:
    * options.filename should be a string.
    * options.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "filename" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   string | function
   Details:
    * options.filename should be a string.
    * options.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "filter" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "filter" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "filter" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "filter" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "filter" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "filter" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "minify" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minify" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minify" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minify" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be an non-empty array."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   function | object { … } | [function | object { … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   Details:
    * options.minimizerOptions should be one of these:
      function | object { … }
      Details:
       * options.minimizerOptions should be an instance of function.
       * options.minimizerOptions should be an object:
         object { … }
    * options.minimizerOptions should be an array:
      [function | object { … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   function | object { … } | [function | object { … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   Details:
    * options.minimizerOptions should be one of these:
      function | object { … }
      Details:
       * options.minimizerOptions should be an instance of function.
       * options.minimizerOptions should be an object:
         object { … }
    * options.minimizerOptions should be an array:
      [function | object { … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   function | object { … } | [function | object { … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   Details:
    * options.minimizerOptions should be one of these:
      function | object { … }
      Details:
       * options.minimizerOptions should be an instance of function.
       * options.minimizerOptions should be an object:
         object { … }
    * options.minimizerOptions should be an array:
      [function | object { … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   function | object { … } | [function | object { … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   Details:
    * options.minimizerOptions should be one of these:
      function | object { … }
      Details:
       * options.minimizerOptions should be an instance of function.
       * options.minimizerOptions should be an object:
         object { … }
    * options.minimizerOptions should be an array:
      [function | object { … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "severityError" option with "() => {}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed."
`;

exports[`validate loader options should throw an error on the "severityError" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed."
`;

exports[`validate loader options should throw an error on the "severityError" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed."
`;

exports[`validate loader options should throw an error on the "severityError" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed."
`;

exports[`validate loader options should throw an error on the "severityError" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed."
`;

exports[`validate loader options should throw an error on the "unknown" option with "/test/" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets?, minify? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets?, minify? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "{"foo":"bar"}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets?, minify? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets?, minify? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets?, minify? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets?, minify? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "test" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets?, minify? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, filter?, severityError?, filename?, deleteOriginalAssets?, minify? }"
`;
